# sonic-moe

./: README.md  ep.md  pyproject.toml  requirements.txt
benchmarks/: bench_triton_moe.py  moe-ep.py
sonicmoe/: __init__.py  moe.py  utils.py
sonicmoe/functional/: __init__.py  backward.py  grouped_gemm.py  reduction_over_k_gather.py  topk_softmax.py
sonicmoe/functional/triton_kernels/: README.md  __init__.py  bitmatrix.py
sonicmoe/quack_utils/: gemm_dgated.py  gemm_gated.py
